# heed-wakeword

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: README.md  browser-and-js.md  colab.md  docker.md  export-and-deploy.md  mobile.md  studio.md
examples/inference_browser/: README.md  audio-worklet.js  index.html  vercel.json  verify-preprocessing.mjs  wake.json  wake.onnx  wakeword.js
examples/inference_browser/models/activate-x/: wake.json  wake.onnx
examples/inference_browser/models/hey-jarvis/: wake.json  wake.onnx
examples/inference_browser/models/hey-scout/: wake.json  wake.onnx
examples/inference_react_native/: .easignore  .gitignore  App.js  README.md  app.json  metro.config.js  package-lock.json  package.json
examples/inference_react_native/android/: settings.gradle
examples/inference_react_native/android/app/: build.gradle
examples/inference_react_native/android/app/src/main/: AndroidManifest.xml
examples/inference_react_native/android/app/src/main/java/ai/heed/inference/example/: MainActivity.kt  MainApplication.kt
examples/inference_react_native/android/app/src/main/res/values/: strings.xml
examples/inference_react_native/assets/: .gitkeep  slot0.int8.onnx  slot0.tflite  slot1.int8.onnx  slot1.json  slot1.onnx  slot1.tflite  slot2.int8.onnx  slot2.json  slot2.onnx  slot2.tflite  slot3.int8.onnx  slot3.json  slot3.onnx  slot3.tflite  slot4.int8.onnx  slot4.json  slot4.tflite
examples/inference_react_native/patches/: onnxruntime-react-native+1.24.3.patch
examples/inference_react_native/src/: audio-decode.js  filter-coeffs.js  preprocessing.js  wakeword.js
heed/: __init__.py  audio.py  augment.py  cli.py  eval.py  export.py  gate.py  infer.py  model.py  trainer.py  tts.py  tts_kokoro.py  web.py
notebooks/: heed_train_colab.ipynb  heed_train_your_voice_colab.ipynb
notes/: sota_review.md
tests/: test_audio.py  test_export.py  test_model.py
tools/: gen_filter_coeffs.py
workspace/mike/: config.json
workspace/mike/export/: README.md  wake.json
workspace/mike/models/: medium.json
